crates/hird-parse/tests/snapshots/smoke__type_paren.snap
---
source: crates/hird-parse/tests/smoke.rs
assertion_line: 261
expression: "render_cst(\"fn f(x: (Int)) = x\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    PARAM_LIST
      PARAM
        IDENT "x"
        COLON ":"
        PAREN_TYPE
          WHITESPACE " "
          L_PAREN "("
          IDENT "Int"
          R_PAREN ")"
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    IDENT "x"
