crates/hird-parse/tests/snapshots/smoke__type_simple_adt.snap
---
source: crates/hird-parse/tests/smoke.rs
assertion_line: 127
expression: "render_cst(\"type Bool = True | False\")"
---
SOURCE_FILE
  TYPE_DECL
    TYPE_KW "type"
    WHITESPACE " "
    IDENT "Bool"
    WHITESPACE " "
    EQ "="
    CONSTRUCTOR
      WHITESPACE " "
      IDENT "True"
    WHITESPACE " "
    PIPE "|"
    CONSTRUCTOR
      WHITESPACE " "
      IDENT "False"
